@@ -131,7 +131,7 @@ func mainLoop(config *configurationStruct, osSignalChannel chan os.Signal, worke
 	key := getKey(config)
 	myCipher = createCipher(key, config.encryption)
 
-	logger.Infof("%s - version %s (Build: %s) starting with %d workers (max %d), pid: %d\n", config.name, VERSION, config.build, config.minWorker, config.maxWorker, os.Getpid())
+	logger.Infof("%s - version %s (Build: %s) starting with %d workers (max %d), pid: %d (max open files: %d)\n", config.name, VERSION, config.build, config.minWorker, config.maxWorker, os.Getpid(), getMaxOpenFiles())
 	mainworker := newMainWorker(config, key, workerMap)
 	mainworker.running = true
 	defer func() { mainworker.running = false }()
