@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - log max open files on startup
+
 1.1.5    Thu Jun 10 19:57:11 CEST 2021
           - cleanup thread dump output
 
